GNOME Bugzilla – Bug 789054
Firefox crashes @gdk_window_begin_move_drag() on WM without _NET_WM_MOVERESIZE
Last modified: 2017-12-29 17:32:31 UTC
Created attachment 361671 [details] Simple testcase Due to bug at emulate_move_drag() in gdk_x11_window_begin_move_drag() Firefox crashes on WM without _NET_WM_MOVERESIZE set. You just need to call gdk_window_begin_move_drag() twice. I can reproduce that on icewm/Fedora 26: Gdk:ERROR:gdkwindow-x11.c:5165:create_moveresize_window: assertion failed: (mv_resize->moveresize_emulation_window == NULL) backtrace:
+ Trace 238067
Mozilla bug: https://bugzilla.mozilla.org/show_bug.cgi?id=1186967
*** Bug 791517 has been marked as a duplicate of this bug. ***
Is this fixed by https://git.gnome.org/browse/gtk+/commit/?h=gtk-3-22&id=e834a2b089085c1c63a4e4b6e06fd84f48cc030e or was that just a partial or temporary fix?
should be fixed by that, indeed. please reopen if not